# projets

Traitement_d_Image/: Bezier.c  Bezier.h  Makefile  files_generation.c  files_generation.h  geom2d.c  geom2d.h  image.c  image.h  resultats_test.txt  robot.c  robot.h  sequence.c  sequence.h  tache8_1.c  tache8_2.c  test_geom2d.c  test_image.c  test_tache3.c  test_tache4.c  test_tache5.c  test_tache5B.c  test_tache6.c  test_tache6_partie1.c  test_tache7_1.c  test_tache7_2.c
Traitement_d_Image/contours/: Asterix3_contour.txt  ColombesDeLaPaix_contour.txt  animaux_contour.txt  courbe_hilbert_7_contour.txt  courbe_hilbert_8_contour.txt  lettre-L-cursive_contour.txt  zebres-1000x0750_contour.txt  zebres-2000x1500_contour.txt  zebres-3000x2250_contour.txt  zebres-4000x3000_contour.txt
Traitement_d_Image/eps_bezier2/: Asterix3_bezier2_Fill_d=0.00.eps  Asterix3_bezier2_Fill_d=1.00.eps  Asterix3_bezier2_Fill_d=2.00.eps  Asterix3_bezier2_Fill_d=4.00.eps  Asterix3_bezier2_Fill_d=8.00.eps
Traitement_d_Image/eps_bezier3/: Asterix3_bezier3_Fill_d=0.00.eps  Asterix3_bezier3_Fill_d=1.00.eps  Asterix3_bezier3_Fill_d=2.00.eps  Asterix3_bezier3_Fill_d=4.00.eps  Asterix3_bezier3_Fill_d=8.00.eps
Traitement_d_Image/eps_d/: Asterix3_Fill_d=0.00.eps  Asterix3_Fill_d=1.00.eps  Asterix3_Fill_d=2.00.eps  Asterix3_Fill_d=4.00.eps  Asterix3_Fill_d=8.00.eps  Asterix3_Stroke_d=0.00.eps
performee site web/performee3 website source code/: Announcement.php  Carsoul.php  addjob.php  announcement-style.css  bd_connect.php  copyright.php  details_profile.css  details_profile.php  details_recruiter.php  footer.php  get_message_content.php  header.php  index.php  job_details.php  logic.php  login.php  logout.php  messages.php  profile-card.php  search_page.php  settings.php  style.css  submited.php  user_header.php
performee site web/performee3 website source code/carousel-07/: index.html
performee site web/performee3 website source code/css/: login.css  search_page.css  style.css
Éditeur de liens/: .gitignore
Éditeur de liens/source_code/: README
Éditeur de liens/source_code/elf_linker-1.0/: ARM_elf.c  ARM_elf.h  Makefile.am  auto.sh  exc.sh  programme_run.sh
Éditeur de liens/source_code/elf_linker-1.0/.deps/: Call_Jump.Po  Correction_des_symboles.Po  Program.Po  Program2.Po  affichage_contenu_section.Po  affichage_entete.Po  affichage_table_reimplantation.Po  affichage_table_section.Po  affichage_table_symbole.Po  appliquation_des_reimplantations.Po  modification_elf.Po  renumeration_des_sections.Po
Éditeur de liens/source_code/elf_linker-1.0/Examples_loader/: Makefile.am  configure  example20.s  example22.s  example5.s  example6.s  example8et16.s
Éditeur de liens/source_code/elf_linker-1.0/Examples_loader/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
Éditeur de liens/source_code/elf_linker-1.0/autom4te.cache/: requests
Éditeur de liens/source_code/elf_linker-1.0/include/: Call_Jump.h  Correction_des_symboles.h  Executable.h  affichage_contenu_section.h  affichage_entete.h  affichage_table_reimplantation.h  affichage_table_section.h  affichage_table_symbole.h  appliquation_des_reimplantations.h  modification_elf.h  renumeration_des_sections.h  test_sections.h
Éditeur de liens/source_code/elf_linker-1.0/src/: Call_Jump.c  Correction_des_symboles.c  Executable.c  Program.c  Program2.c  affichage_contenu_section.c  affichage_entete.c  affichage_table_reimplantation.c  affichage_table_section.c  affichage_table_symbole.c  appliquation_des_reimplantations.c  modification_elf.c  renumeration_des_sections.c
Éditeur de liens/source_code/elf_linker-1.0/test/: automated_testing.sh  fich.txt
Éditeur de liens/source_code/elf_linker-1.0/test/Reimplantations_de_type_R_ARM_ABS/: test.sh  test_chaque_sections1.sh
Éditeur de liens/source_code/elf_linker-1.0/test/Reimplantations_de_type_R_ARM_JUMP24_et_R_ARM_CALL/: test.sh  test_chaque_sections2.sh
Éditeur de liens/source_code/elf_linker-1.0/test/elf_test_file/: simple_arm.s
Éditeur de liens/source_code/elf_linker-1.0/test/test_affichage_table_de_symbol/: test_affichage_table_symbole.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_correction_des_symboles/: test_correction_des_symboles.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_exec/: auto.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_header/: test1_header.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_index_table/: test_index_table.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_print_section_table/: test_print_section.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_realocation_table/: test_realocation_table.sh
Éditeur de liens/source_code/elf_linker-1.0/test/test_renumeration_des_sections/: test_elf_coherence.c  test_renumeration_des_sections.sh  test_sections.c
(+47 files in other folders)
